objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Group__c</fullName>
        <inlineHelpText>tbc</inlineHelpText>
        <label>Account Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRX_Blacklist_Fix__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blacklist (Fix)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRX_Blacklist_Mobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blacklist (Mobile)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRX_Financial_Value__c</fullName>
        <label>Solvency Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRX_Legal_Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRX_Micro_Segment__c</fullName>
        <label>Micro Segment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRX_Proximus_CDB_Id__c</fullName>
        <externalId>true</externalId>
        <label>CDB Id</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRX_Proximus_CDB_Mobile_Id__c</fullName>
        <label>CDB Mobile Id</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRX_VAT_Number__c</fullName>
        <label>VAT Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>PRX_Proximus_CDB_Id__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Group__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>PRX_AccountName_ReadOnly_For_SalesUser</fullName>
        <active>true</active>
        <description>Account Name field has to be read-only for Sales User</description>
        <errorConditionFormula>AND( $Profile.Name &lt;&gt; &quot;System Administrator&quot;, $UserRole.Name &lt;&gt; &quot;PRX_Admin_Light&quot;, ISCHANGED( Name ) )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Account Name cannot be edited</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRX_AccountOwner_ReadOnly_For_SalesUser</fullName>
        <active>true</active>
        <description>Account Owner field has to be read-only for Sales User</description>
        <errorConditionFormula>AND( $Profile.Name  &lt;&gt; &quot;System Administrator&quot;,  $UserRole.Name &lt;&gt; &quot;PRX_Admin_Light&quot;, ISCHANGED(OwnerId) )</errorConditionFormula>
        <errorDisplayField>OwnerId</errorDisplayField>
        <errorMessage>Account Owner cannot be edited</errorMessage>
    </validationRules>
</CustomObject>